--- a/package.json
+++ b/package.json
@@ -3,21 +3,40 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev-server": "webpack-dev-server"
+    "clean": "rm -rf build public/bundle.js",
+    "build": "babel server --out-dir build --presets=es2015 && webpack",
+    "win_start": "cross-env NODE_ENV=production node ./build/main.js",
+    "win_development": "cross-env NODE_ENV=development nodemon --exec babel-node --presets=es2015 ./server/main.js --watch server"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^0.16.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "express-session": "^1.15.3",
+    "mongoose": "^4.10.3",
+    "morgan": "^1.8.2",
+    "path": "^0.12.7",
     "react": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react-addons-update": "^15.5.2",
+    "react-dom": "^15.2.1",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-timeago": "^3.3.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.28.3",
     "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.18.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
